--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-   background-color: #DEB887; /* warna kuning cerah */
+   background-color: red; /* warna kuning cerah */
     font-family:Arial, sans-serif; /* Jenis huruf yang bersih dan mudah di baca */
     color: #191970; /* warna teks utama (biru gelap) */
 }
 
-.kartu-profil {
+.kartu-profil { ... }
    width: 300px;
    margin: 100px auto; /* 50 px jarak atas/bawah, auto menengahkan kiri/kanan */
    padding: 50px;
